# Clip-Transfer

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  compose.yaml  docker-setup.sh  overview.md
data/: database.sqlite
src/: args.rs  main.rs  pasta.rs
src/endpoints/: core_routes.rs  webrtc_routes.rs
src/util/: db.rs  db_json.rs  db_sqlite.rs  misc.rs
templates/: create.html  error.html  expired.html  home.html  offline.html  paste.html  share.html  view.html
templates/assets/: fileStore.js  manifest.json  rtcEngine.js  signalingClient.js  sw.js  uiController.js
